Changed Factories and made combining possible